bug 721750 - support text-shadow property on ::-moz-selection. r=dbaron